force-app/main/default/objects/MUSW__Parcel_Contact2__c/MUSW__Parcel_Contact2__c.object-meta.xml
<CustomObject>
    <customHelp>MUSW__HelpInterface</customHelp>
    <description>Contacts associated to a Parcel eg. Owner</description>
    <label>Parcel Contact</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parcel Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>