force-app/main/default/objects/MUSW__Parcel_Contact2__c/fields/MUSW__Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Contact_Type__c</fullName>
    <description>The type of contact; i.e., owner, renter, etc.</description>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tenant</fullName>
                <default>true</default>
                <label>Tenant</label>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Appellant</fullName>
            </value>
            <value>
                <fullName>Applicant</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Business Owner</fullName>
            </value>
            <value>
                <fullName>Designer</fullName>
            </value>
            <value>
                <fullName>Emergency Contact</fullName>
            </value>
            <value>
                <fullName>Engineer</fullName>
            </value>
            <value>
                <fullName>Interested Party</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>