force-app/main/default/objects/MUSW__Parcel_Contact2__c/fields/MUSW__Primary__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag for indicating which contact is the most important. Typically, this is the current owner. It&apos;s referenced by the code to populate contact lookups on objects related to this Parcel.</description>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>